[gd_scene load_steps=66 format=2]

[ext_resource path="res://assets/img/Config press.png" type="Texture" id=1]
[ext_resource path="res://assets/img/Copy.png" type="Texture" id=2]
[ext_resource path="res://assets/img/botones/Inicio.png" type="Texture" id=3]
[ext_resource path="res://assets/img/botones/Salir.png" type="Texture" id=4]
[ext_resource path="res://assets/img/botones/Inicio Press.png" type="Texture" id=5]
[ext_resource path="res://assets/img/botones/salir Press.png" type="Texture" id=6]
[ext_resource path="res://assets/img/botones/Salir Hover.png" type="Texture" id=7]
[ext_resource path="res://assets/img/botones/Inicio hover.png" type="Texture" id=8]
[ext_resource path="res://assets/img/AlterCode.png" type="Texture" id=9]
[ext_resource path="res://assets/img/ConfigMenu.png" type="Texture" id=10]
[ext_resource path="res://scripts/salir.gd" type="Script" id=11]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_03.png" type="Texture" id=12]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_02.png" type="Texture" id=13]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_95.png" type="Texture" id=14]
[ext_resource path="res://assets/img/botones/Configuracion/images/LblBotones_01.png" type="Texture" id=15]
[ext_resource path="res://assets/img/botones/Cancelar Press.png" type="Texture" id=16]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_01.png" type="Texture" id=17]
[ext_resource path="res://assets/img/botones/Cancelar.png" type="Texture" id=18]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_91.png" type="Texture" id=19]
[ext_resource path="res://assets/img/botones/Cancelar Hover.png" type="Texture" id=20]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_35.png" type="Texture" id=21]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_77.png" type="Texture" id=22]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_39.png" type="Texture" id=23]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/ESC Press.png" type="Texture" id=24]
[ext_resource path="res://assets/img/botones/Configuracion/images/LblBotones_03.png" type="Texture" id=25]
[ext_resource path="res://assets/img/botones/Configuracion/images/LblBotones_02.png" type="Texture" id=26]
[ext_resource path="res://assets/img/botones/Configuracion/images/Video press.png" type="Texture" id=27]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_20.png" type="Texture" id=28]
[ext_resource path="res://assets/img/botones/Configuracion/images/Video.png" type="Texture" id=29]
[ext_resource path="res://assets/img/botones/Configuracion/images/Desactivado.png" type="Texture" id=30]
[ext_resource path="res://assets/img/botones/Configuracion/images/Video hover.png" type="Texture" id=31]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_17.png" type="Texture" id=32]
[ext_resource path="res://assets/img/Config hover.png" type="Texture" id=33]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_73.png" type="Texture" id=34]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_57.png" type="Texture" id=35]
[ext_resource path="res://assets/img/botones/Configuracion/images/Activado.png" type="Texture" id=36]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_59.png" type="Texture" id=37]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_58.png" type="Texture" id=38]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/ESC.png" type="Texture" id=39]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_76.png" type="Texture" id=40]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_04.png" type="Texture" id=41]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_60.png" type="Texture" id=42]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Keyboard-Letters-and-Symbols_21.png" type="Texture" id=43]
[ext_resource path="res://assets/img/Confirmacion.png" type="Texture" id=44]
[ext_resource path="res://assets/img/Config.png" type="Texture" id=45]
[ext_resource path="res://assets/fonts/Botones/Hannover Messe Sans.otf" type="DynamicFontData" id=46]
[ext_resource path="res://Esenas/test/scripts/MenuConfig.gd" type="Script" id=47]
[ext_resource path="res://animaciones/Fade_In.tres" type="Animation" id=48]
[ext_resource path="res://animaciones/Fade_Out.tres" type="Animation" id=49]
[ext_resource path="res://Esenas/Parallax.tscn" type="PackedScene" id=50]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Enter Press.png" type="Texture" id=51]
[ext_resource path="res://assets/img/botones/Configuracion/Controles/Enter.png" type="Texture" id=52]
[ext_resource path="res://assets/img/botones/Configuracion/images/Creditos hover.png" type="Texture" id=53]
[ext_resource path="res://assets/img/botones/Configuracion/images/Creditos Press.png" type="Texture" id=54]
[ext_resource path="res://assets/img/botones/Configuracion/images/Creditos.png" type="Texture" id=55]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 46 )

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 46 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 38 ), ExtResource( 21 ), ExtResource( 19 ) ],
"loop": true,
"name": "Abajo",
"speed": 1.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 35 ), ExtResource( 23 ), ExtResource( 14 ) ],
"loop": true,
"name": "Arriba",
"speed": 1.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 28 ), ExtResource( 40 ) ],
"loop": true,
"name": "Derecha",
"speed": 1.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 37 ), ExtResource( 32 ), ExtResource( 34 ) ],
"loop": true,
"name": "Izquierda",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 46 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 43 ), ExtResource( 22 ), ExtResource( 52 ), ExtResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 46 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 39 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 39
font_data = ExtResource( 46 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 46 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1912.0
margin_bottom = -1063.0
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 11 )
__meta__ = {
"_edit_vertical_guides_": [ 372.0 ]
}

[node name="MenuInicial" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -636.0
margin_bottom = -357.0

[node name="Logo" type="Sprite" parent="MenuInicial"]
position = Vector2( 48, 26 )
scale = Vector2( 0.342912, 0.342912 )
texture = ExtResource( 9 )
centered = false

[node name="Botones" type="Control" parent="MenuInicial"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Iniciar" type="TextureButton" parent="MenuInicial/Botones"]
margin_left = 49.0
margin_top = 305.0
margin_right = 204.0
margin_bottom = 364.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )
expand = true

[node name="Salir" type="TextureButton" parent="MenuInicial/Botones"]
margin_left = 29.0
margin_top = 430.0
margin_right = 179.0
margin_bottom = 487.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Config" type="TextureButton" parent="MenuInicial/Botones"]
margin_left = 1195.0
margin_top = 632.0
margin_right = 1269.0
margin_bottom = 710.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 45 )
expand = true

[node name="reiniciar" type="Button" parent="MenuInicial/Botones"]
visible = false
margin_left = 26.0
margin_top = 540.0
margin_right = 276.0
margin_bottom = 582.0
custom_fonts/font = SubResource( 1 )
text = "Reiniciar animacion"

[node name="Secreto" type="TextureButton" parent="MenuInicial/Botones"]
margin_left = 1277.33
margin_top = 567.333
margin_right = 1280.33
margin_bottom = 570.333

[node name="Copy" type="Sprite" parent="MenuInicial"]
position = Vector2( 6, 697 )
texture = ExtResource( 2 )
centered = false

[node name="Fondo" type="Control" parent="MenuInicial"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.6667
margin_top = 18.6667
margin_right = 20.6666
margin_bottom = 18.6666

[node name="ParallaxBackground" parent="MenuInicial/Fondo" instance=ExtResource( 50 )]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 1280.0
margin_bottom = 720.0

[node name="ConfirmacionSalida" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
texture = ExtResource( 44 )
expand = true

[node name="Logo" type="Sprite" parent="ConfirmacionSalida"]
position = Vector2( -148, -250 )
scale = Vector2( 0.445538, 0.445538 )
texture = ExtResource( 9 )
centered = false

[node name="Salirpop" type="TextureButton" parent="ConfirmacionSalida"]
margin_left = 40.0
margin_top = 132.0
margin_right = 158.0
margin_bottom = 177.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Cancelarpop" type="TextureButton" parent="ConfirmacionSalida"]
margin_left = 205.0
margin_top = 137.0
margin_right = 355.0
margin_bottom = 177.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 20 )
expand = true

[node name="MenuConfig" type="TextureRect" parent="."]
visible = false
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 228.0
margin_top = 154.167
margin_right = 1073.0
margin_bottom = 581.167
texture = ExtResource( 10 )
expand = true
script = ExtResource( 47 )

[node name="Controles" type="TextureButton" parent="MenuConfig"]
margin_left = 30.0
margin_top = 64.0
margin_right = 270.0
margin_bottom = 124.0
disabled = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 25 )
texture_disabled = ExtResource( 26 )
expand = true

[node name="ControlesCtrl" type="Control" parent="MenuConfig/Controles"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Movimiento" type="Label" parent="MenuConfig/Controles/ControlesCtrl"]
margin_left = 317.833
margin_top = 5.5
margin_right = 438.833
margin_bottom = 41.5
custom_fonts/font = SubResource( 8 )
text = "Movimiento"

[node name="Arriba" type="AnimatedSprite" parent="MenuConfig/Controles/ControlesCtrl/Movimiento"]
position = Vector2( 57.3333, 104.667 )
scale = Vector2( 2.86198, 2.86198 )
frames = SubResource( 7 )
animation = "Abajo"
playing = true

[node name="Abajo" type="AnimatedSprite" parent="MenuConfig/Controles/ControlesCtrl/Movimiento"]
position = Vector2( 57.3333, 64.6666 )
scale = Vector2( 2.86198, 2.86198 )
frames = SubResource( 7 )
animation = "Arriba"
playing = true

[node name="Izquierda" type="AnimatedSprite" parent="MenuConfig/Controles/ControlesCtrl/Movimiento"]
position = Vector2( 15.9999, 104.667 )
scale = Vector2( 2.86198, 2.86198 )
frames = SubResource( 7 )
animation = "Izquierda"
playing = true

[node name="Derecha" type="AnimatedSprite" parent="MenuConfig/Controles/ControlesCtrl/Movimiento"]
position = Vector2( 99.3336, 104.667 )
scale = Vector2( 2.86198, 2.86198 )
frames = SubResource( 7 )
animation = "Derecha"
playing = true

[node name="Interactuar" type="Label" parent="MenuConfig/Controles/ControlesCtrl"]
margin_left = 485.833
margin_top = 5.5
margin_right = 610.833
margin_bottom = 41.5
custom_fonts/font = SubResource( 9 )
text = "Interactuar"

[node name="Accion" type="AnimatedSprite" parent="MenuConfig/Controles/ControlesCtrl/Interactuar"]
position = Vector2( 61.3333, 64.6666 )
scale = Vector2( 2.83334, 2.83334 )
frames = SubResource( 10 )
frame = 2
playing = true

[node name="AbrirMenu" type="Label" parent="MenuConfig/Controles/ControlesCtrl"]
margin_left = 637.167
margin_top = 5.5
margin_right = 775.167
margin_bottom = 41.5
custom_fonts/font = SubResource( 11 )
text = "Abrir el men√∫"

[node name="menu" type="AnimatedSprite" parent="MenuConfig/Controles/ControlesCtrl/AbrirMenu"]
position = Vector2( 62.8333, 64.5 )
scale = Vector2( 2.875, 2.875 )
frames = SubResource( 12 )
playing = true

[node name="Video" type="TextureButton" parent="MenuConfig"]
margin_left = 30.0
margin_top = 130.0
margin_right = 270.0
margin_bottom = 190.0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 31 )
texture_disabled = ExtResource( 27 )
expand = true

[node name="CheckButton" type="CheckButton" parent="MenuConfig/Video"]
visible = false
margin_left = 292.0
margin_top = -78.0
margin_right = 791.0
margin_bottom = -23.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 6 )
custom_icons/off = ExtResource( 30 )
custom_icons/on = ExtResource( 36 )
text = "Pantalla completa"
clip_text = true

[node name="Audio" type="TextureButton" parent="MenuConfig"]
margin_left = -98.1667
margin_top = 62.8333
margin_right = -58.1667
margin_bottom = 102.833

[node name="Accesibilidad" type="TextureButton" parent="MenuConfig"]
margin_left = 230.5
margin_top = -27.8333
margin_right = 270.5
margin_bottom = 12.1667

[node name="Creditos" type="TextureButton" parent="MenuConfig"]
margin_left = 29.8333
margin_top = 356.167
margin_right = 175.833
margin_bottom = 396.167
texture_normal = ExtResource( 55 )
texture_pressed = ExtResource( 54 )
texture_hover = ExtResource( 53 )
texture_disabled = ExtResource( 54 )
expand = true

[node name="Salir" type="TextureButton" parent="MenuConfig"]
margin_left = -130.833
margin_top = 74.8333
margin_right = -90.8333
margin_bottom = 114.833

[node name="SalirConfig" type="Button" parent="MenuConfig"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.333
margin_top = 145.333
margin_right = -167.333
margin_bottom = 181.333
custom_fonts/font = SubResource( 4 )
text = "Salir"
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade_In = ExtResource( 48 )
anims/Fade_Out = ExtResource( 49 )

[connection signal="pressed" from="MenuInicial/Botones/Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="pressed" from="MenuInicial/Botones/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="MenuInicial/Botones/Config" to="." method="_on_Config_pressed"]
[connection signal="pressed" from="MenuInicial/Botones/reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="MenuInicial/Botones/Secreto" to="." method="_on_Secreto_pressed"]
[connection signal="pressed" from="ConfirmacionSalida/Salirpop" to="." method="_on_Salirpop_pressed"]
[connection signal="pressed" from="ConfirmacionSalida/Cancelarpop" to="." method="_on_Cancelarpop_pressed"]
[connection signal="pressed" from="MenuConfig/Controles" to="MenuConfig" method="_on_Controles_pressed"]
[connection signal="pressed" from="MenuConfig/Video" to="MenuConfig" method="_on_Video_pressed"]
[connection signal="pressed" from="MenuConfig/Creditos" to="MenuConfig" method="_on_Creditos_pressed"]
[connection signal="pressed" from="MenuConfig/SalirConfig" to="." method="_on_SalirConfig_pressed"]
